# ForSeeBench-Prospective-Audio-Description-QA-for-Evaluating-Accessible-Movie-Understanding

./: LICENSE.md  README.md  pyproject.toml
configs/: context_selection.yaml  dataset_generation.yaml  qwen.yaml
docs/: anonymization.md  benchmark_card.md  dataset_construction.md  evaluation_protocol.md  huggingface_release_plan.md  license_decision.md  release_commands.md  reproducibility.md  reviewer_quickstart.md  source_data_redistribution_audit.md  source_dataset_citations.md
figures/: context_scaling_data.csv
hf_dataset/: LICENSE.md  README.md  croissant.json  croissant_metadata_draft.json  croissant_rai_notes.md  schema.md
scripts/: 00_clean_repo.py  01_parse_lsmdc.py  02_build_windows.py  02b_select_valid_contexts.py  03_qwen_extract_actions.py  04_generate_benchmark_examples.py  05_validate_and_filter.py  06_split_dataset.py  07_export_dataset_card.py  analyze_expectedness.py  audit_verbatim_target_options.py  check_anonymization.py  check_predicc_prompt_invariants.py  check_submission_ready.py  debug_adaptive_prompt.py  evaluate_autoad_mcq.py  evaluate_mcq.py  evaluate_predicc.py  export_release_qna.py  launch_movies_tmux.sh  prepare_anonymous_release.py  run_movie_pipeline.sh  summarize_pipeline_outputs.py  upload_hf_dataset.py  validate_croissant_metadata.py  validate_dataset.py
tests/: conftest.py  helpers.py  test_anonymization_checker.py  test_autoad_mcq_evaluation.py  test_context_selection.py  test_dataset_validation.py  test_expectedness_analysis.py  test_json_parsing.py  test_metric_sanity.py  test_sample_data_loads.py  test_schema.py  (+4 more)
(+48 files in other folders)
