[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forseebench"
version = "0.1.0"
description = "Prospective audio-description QA benchmark tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
parquet = [
  "pandas>=2.0",
  "pyarrow>=14.0",
]
model = [
  "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["forseebench", "forseebench.*"]
